# ar_test

./: .gitignore  README.md  main.py  pyproject.toml
apiTest/: .gitignore  pom.xml
apiTest/NodeJs/: package-lock.json  package.json
apiTest/NodeJs/src/: AR 백엔드 요청 예제.js  데이터 백엔트 요청 예제.js
apiTest/src/main/java/com/seok/: App.java
apiTest/src/test/java/com/seok/: AppTest.java
bodyMEA/: .gitignore  Main.py  Yolo.py  YoloTest.py  main.py
bodyMEA/src/: BG-Remove.py  BodyMEA.py  GetClothesImg.py  IDM-VTON-API.py  README.md  TryOn.py
clothesMEA/: .gitignore  README.md  environment.yml  environment_cuda.yml  record.txt  start.sh
clothesMEA/src/: (288x384) getKeyPorint.py  Main.py  Utills.py  cardDict_pred.py  cardDict_train.py  configuration.py  custumTypes.py  getCardPoint.py  getKeyPorint.py
clothesMEA/src/HRnet/: pose_hrnet.py  파라미터_백업.yaml
clothesMEA/train/: cardDict_pred.py  cardDict_train.py
modelTest/: .gitignore  environment.yml  pyproject.toml
modelTest/bodyMEA/: BG-Remove.py  BodyMEA.py  GetClothesImg.py  IDM-VTON-API.py  Main.py  TryOn.py
