[tool.poetry]
name = "ar-test"
version = "0.1.0"
description = ""
authors = ["Lseoksee <da864268@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
